<resources>
    <string name="app_name">Yumly Planner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="emiall">Email</string>
    <string name="hi">Hi, Welcome Back! 👋</string>
    <string name="Login">Login</string>
    <string name="orwith">OR With</string>
    <string name="DHA">"Don’t have an account ? "</string>
    <string name="default_web_client_id">"230636474613-erhri1njdv3460iksib5a5j86afso5jq.apps.googleusercontent.com"</string>
    <string name="skip">Skip</string>
    <string name="creat_acount">Create an account</string>
    <string name="creat_acount_">Plane Your Meal today!</string>
    <string name="AHA">"Already have an account? "</string>
    <string name="signUp">Sign Up</string>
    <string name="confirm_password">Confirm Your Password</string>
    <string name="enter_password">Enter Your Password</string>
    <string name="enter_emiall">Enter Your Email</string>
    <string name="username">Enter Your User Name</string>
    <string name="good_morning">Good Morning</string>
    <string name="alena_sabyan">Alena Sabyan</string>
    <string name="featured">Featured</string>
    <string name="title">Tittle</string>
    <string name="instruction">instruction</string>
    <string name="beefChip">Beef</string>
    <string name="chickenChip">Chicken</string>
    <string name="Category">Category</string>
    <string name="ingredant">Ingredant</string>
    <string name="ingredient">Ingredient</string>
    <string name="country">Country</string>
    <string name="searchhint">Search</string>
    <string name="content_description_start_icon">content description</string>
    <string name="clickable_icon">Clickable Icon</string>
    <string name="todo">TODO</string>
    <string name="meal_of_the_day">Meal of the Day</string>
    <string name="cuntry">Country</string>
    <string name="add">Add To Calendar</string>
    <string name="todoc">TODO</string>
    <string name="todon">TODO</string>
    <string name="w">TODO</string>
    <string name="a">TODO</string>
    <string name="e">TODO</string>
    <string name="re">TODO</string>
    <string name="q">TODO</string>
    <string name="date">Date</string>
    <string name="MOW">Meal of this Week</string>
    <string name="logout">Log out</string>
    <string name="hello">Fuel your day, the healthy way 🥘</string>
</resources>