<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <Button
        android:id="@+id/backBtn"
        style="?attr/materialIconButtonStyle"
        android:layout_width="58dp"
        android:layout_height="56dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/skip"
        app:icon="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/searchhint"
        app:hintTextColor="@color/primaryColor"
        app:boxStrokeColor="@color/primaryColor"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_Search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="400dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_search"
        app:selectionRequired="true"
        app:singleSelection="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"

            >

            <com.google.android.material.chip.Chip
                android:id="@+id/category_chip"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:backgroundTint="@color/toneColor"
                android:checkable="true"
                android:clickable="true"
                android:text="@string/Category"
                android:textColor="@color/primaryColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="15dp"
            android:gravity="center">

            <com.google.android.material.chip.Chip
                android:id="@+id/ingredient_chip"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:backgroundTint="@color/toneColor"
                android:checkable="true"
                android:clickable="true"
                android:text="@string/ingredient"
                android:textColor="@color/primaryColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="15dp"
            android:gravity="center">

            <com.google.android.material.chip.Chip
                android:id="@+id/country_chip"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:backgroundTint="@color/toneColor"
                android:checkable="true"
                android:clickable="true"
                android:text="@string/country"
                android:textColor="@color/primaryColor" />
        </LinearLayout>
    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_RV"
        android:layout_width="389dp"
        android:layout_height="576dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        android:nestedScrollingEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_group" />


</androidx.constraintlayout.widget.ConstraintLayout>